Increase header font size, fix home page gaps

--- a/src/app.css
+++ b/src/app.css
@@ -100,7 +100,7 @@ h4,
 h5,
 h6 {
   font-family: var(--font-heading);
-  font-size: 160%;
+  font-size: 200%;
   color: var(--color-heading);
 }
 
